<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi-TM</string>
    <string name="action_settings">Settings</string>
    <string name="description" />
    <string name="request_pass"><u>Отправить смс с кодом подтверждения</u></string>
    <string name="btn_main1_registr"><u>зарегистрироваться</u></string>
    <string name="btn_main1_enter"><u>вход</u></string>
    <string name="ed_txt_name">Телефон</string>
    <string name="ed_txt_pass">Пароль</string>
    <string name="lay_ent_btn_enter">ВХОД</string>
    <string name="title_activity_order_layout">OrderLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_confirm_layout">ConfirmLayout</string>
    <string name="title_activity_history_layout">HistoryLayout</string>
    <string name="phone_number">Номер телефона</string>
    <string name="LayMain_hint_code">Код подтверждения</string>
    <string name="LayMain_hint_phone_number">Номер телефона</string>
    <string name="LayMain_hint_name">Имя</string>
    <string name="LayMain_hint_addr">Домашний адрес</string>
    <string name="LayMain_hint_addr_home">Дом</string>
    <string name="LayMain_hint_addr_corp">Корпус</string>
    <string name="dont_have_internet">Отсуствует интернет соединение</string>
    <string name="notify_enter_number">Введите номер</string>
    <string name="notify_incorrect_number">Некорректный номер</string>
    <string name="notify_wait_for_sms">Ожидайте СМС ссобщение на указанный номе</string>
    <string name="notify_number_exists">Номер существует</string>
    <string name="notify_pass_or_login_wrong">Неверная комбинация логин/пароль!</string>
    <string name="notify_enter_pass">Введите пароль</string>
    <string name="Android_Order">http://taxi-tm.ru/index/android_order</string>
    <string name="Android_Get_Services">"http://taxi-tm.ru/index/android_get_taxi_service"</string>
    <string name="congragulation_order">Заказ успешно отправлен</string>
    <string name="change">ИЗМЕНИТЬ</string>
    <string name="notify_same_address">Нельзя указать одинаковый адрес</string>
    <string name="repeat_order">Повтор заказа</string>

    <string name="setting_name">Имя</string>
    <string name="setting_street">Улица</string><string name="setting_changePass">Cменить пароль вы можете на нашем сайте</string><string name="change_pass">ИЗМЕНИТЬ ПАРОЛЬ</string>
    <string name="operator_off">Извините, в данной службе такси недоступен оператор, выберете другой сервис</string>

</resources>