<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:background="@color/White">


    <EditText
            android:id="@+id/setting_name"
            android:background="@drawable/text_input"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:hint="Имя"

            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"/>

    <RelativeLayout
            android:id="@+id/setting_address_rel"

            android:layout_alignLeft="@+id/setting_name"
            android:layout_below="@+id/setting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/setting_name">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_street"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/textView"
                android:layout_centerHorizontal="true"/>

        <AutoCompleteTextView
                android:id="@+id/sett_to"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:background="@drawable/text_input"
                android:hint="@string/LayMain_hint_addr"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"/>



        <EditText
                android:id="@+id/sett_to_numb"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:background="@drawable/text_input"
                android:hint="@string/LayMain_hint_addr_home"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/textView"/>

        <EditText
                android:id="@+id/sett_to_corp"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:background="@drawable/text_input"
                android:hint="@string/LayMain_hint_addr_corp"
                android:ems="10"
                android:layout_below="@+id/textView5"
                android:layout_toRightOf="@+id/sett_to_numb"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/LayMain_hint_addr_home"
                android:id="@+id/textView4"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/sett_to"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/LayMain_hint_addr_corp"
                android:id="@+id/textView5"

                android:layout_below="@+id/sett_to"
                android:layout_toRightOf="@+id/textView"/>

    </RelativeLayout>

    <Button
            android:id="@+id/setting_change_params"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/setting_address_rel"
            android:layout_alignRight="@+id/setting_address_rel"
            android:text="@string/change"
            style="@style/OrangeButton"
            android:background="@drawable/button_shape_1"
            android:onClick="change_params"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_name"
            android:id="@+id/textView2"
            android:layout_alignLeft="@+id/setting_name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_changePass"
            android:id="@+id/textView6"
            android:layout_below="@+id/setting_change_params"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textIsSelectable="false"
            android:layout_alignLeft="@+id/setting_address_rel"
            android:layout_alignRight="@+id/setting_address_rel"
            android:gravity="center_horizontal"/>

    <Button
            style="@style/OrangeButton"
            android:id="@+id/button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/change_pass"
            android:background="@drawable/button_shape_1"
            android:onClick="change_pass"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>


</RelativeLayout>
        </ScrollView>