<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".MainActivity"
  
    >
    
    <!--  
    эти строчки были в корневом элементе
      -->

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        
        android:layout_marginTop="10dp"
        
       android:src="@drawable/logo"
        android:contentDescription="@string/description" />

    <ImageView
        android:id="@+id/img_bibicar"
        android:layout_width="200dp"
        android:layout_height="65dp"
        
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/img_logo"
      
        
        android:src="@drawable/bibicar"
        
        android:contentDescription="@string/description" />
    <ImageView 
        android:id="@+id/img_vopros"
        android:layout_width="60dp"
        android:layout_height="60dp"
        
        android:layout_below="@+id/img_logo"
              
        android:layout_marginTop="10dp" 
              
        android:contentDescription="@string/description"
        
        android:src="@drawable/znak_v_apelsine"
        />
    
    <ImageView 
        android:id="@+id/img_text"
        
        
        android:layout_width="220dp"
        android:layout_height="60dp"
        
       	
       	android:layout_alignLeft="@+id/img_bibicar"
        
        android:layout_toRightOf="@+id/img_vopros"
        android:layout_below="@+id/img_bibicar"
        android:layout_alignTop="@+id/img_vopros"
        
        android:contentDescription="@string/description"
        
        android:src="@drawable/pervii_ra_ne_pidoras"
        />
    
    <LinearLayout 	
        			android:orientation="vertical" 
       				android:id="@+id/linear_parent"
       	 			android:layout_below="@+id/img_vopros"
       				android:layout_width="fill_parent"
       				android:layout_height="match_parent"
       				android:layout_margin="10dp">
       	
       	
       				<!-- ЛИНИЯ ВВОДА НОМЕРА -->
       		 		<LinearLayout 	android:id="@+id/linear1"
       		 		    
        							
       								android:layout_weight="1"
        							android:layout_width="fill_parent"
						         	android:layout_height="match_parent"
						         	android:orientation="horizontal" 
        							>
        
       													<EditText 
           														android:id="@+id/txt_telephone_number_main"
            													android:layout_weight="4"
																android:inputType="phone"
            													android:layout_height="30dp"
            													android:layout_width="match_parent" 		
          														android:background="@drawable/text_input"
          														android:hint="Номер Телефона"
          														/>
       													
       													<ImageView
       													    	android:id="@+id/star1"
       													    	style="@style/Stars"
       													   		android:layout_weight="1"
       													    	android:contentDescription="@string/description" />
       		
    			</LinearLayout>
    			<!-- ЗАПРОС КОДА В СМС -->
       		 	<LinearLayout
       		 	   				android:id="@+id/LinearLayout01"
						    	
						    	android:layout_weight="1"
						        android:layout_width="fill_parent"
						        android:layout_height="match_parent"
						        android:orientation="horizontal" 
       		 	    >
       		 	    <TextView 
       		 	        android:id="@+id/request_pass"
       		 	        android:text="@string/request_pass"
       		 	        android:layout_width="fill_parent"
       		 	        android:layout_height="fill_parent"
       		 	        android:singleLine="true"
       		 	        android:onClick="btn_RequestPass"
       		 	        android:clickable="true"
       		 	        />
       		 	</LinearLayout>
       		 	
				<!-- ВВОД КОДА -->
		        <LinearLayout
						    	 android:id="@+id/LinearLayout02"
						    	 
						    	 android:layout_weight="1"
						         android:layout_width="fill_parent"
						         android:layout_height="match_parent"
						         android:orientation="horizontal" 
						         >
       													
		            									<EditText 
           														android:id="@+id/txt_confirm_pass"
            													android:layout_weight="4"
																android:inputType="number"
            													android:layout_height="30dp"
            													android:layout_width="match_parent" 		
          														android:background="@drawable/text_input"
          														android:hint="Код подтверждения"
          														/>
       													
       													<ImageView
       													    android:id="@+id/star2"
       													    style="@style/Stars"
       													   
       													    android:layout_weight="1"
       													    android:contentDescription="@string/description"
       													     />

		        </LinearLayout>
		         <LinearLayout
						    	 android:id="@+id/LinearLayout03"
						    	 
						    	 android:layout_weight="1"
						         android:layout_width="fill_parent"
						         android:layout_height="match_parent"
						         android:orientation="horizontal" 
						         >
       													
		            									<EditText 
           														android:id="@+id/txt_enter_name"
            													android:layout_weight="4"
																android:inputType="text"
            													android:layout_height="30dp"
            													android:layout_width="match_parent" 		
          														android:background="@drawable/text_input"
          														android:hint="Имя"
          														
          														/>
       													
       													<ImageView
       													    	android:id="@+id/star3"
       													    	style="@style/Stars"
       													   	 	android:layout_weight="1"
       													    	
       													    	
       													    	android:contentDescription="@string/description" />
		        </LinearLayout>
		        
		        <LinearLayout
					android:id="@+id/LinearLayout04" 
					android:layout_weight="1"
					android:layout_width="fill_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal" 
				>
       													
		            					<Spinner
           									android:id="@+id/spiner_city"
            								android:layout_weight="4"
											android:inputType="text"
            								android:layout_height="30dp"
            								android:layout_width="match_parent" 		
          									android:background="@drawable/spinner_input"
          									android:clickable="true"
          														
          								/>
       													
       									<ImageView
       										android:id="@+id/star4"
       										style="@style/Stars"
       										android:layout_weight="1"
       										android:contentDescription="@string/description" 
       									/>
		        </LinearLayout>
		        
		         <LinearLayout
						    	 android:id="@+id/LinearLayout05"
						    	 
						    	 android:layout_weight="1"
						         android:layout_width="fill_parent"
						         android:layout_height="match_parent"
						         android:orientation="horizontal" 
						         >
       													
		            									<MultiAutoCompleteTextView
           														android:id="@+id/LayMain_txt_street"
           														
            													android:layout_weight="4"
																android:inputType="text"
            													android:layout_height="30dp"
            													android:layout_width="match_parent" 		
          														android:background="@drawable/spinner_input"
          														
          														
          														/>
       													
       													<ImageView
       													    	android:id="@+id/star5"
       													    	style="@style/Stars"
       													   	 	android:layout_weight="1"
       													    	
       													    	android:contentDescription="@string/description" />
		        </LinearLayout>
		        <LinearLayout
						    	 android:id="@+id/LinearLayout06"
						    	 
						    	 android:layout_weight="1"
						         android:layout_width="fill_parent"
						         android:layout_height="match_parent"
						         android:orientation="horizontal" 
						         >
       													
		            									<Button 
		            									   android:id="@+id/btn_registration"
		            									   android:layout_weight="1"
		            									   android:layout_height="35dp"
		            									   android:layout_width="match_parent"
		            									   android:background="@drawable/button_shape_1"
		            									   android:text="@string/btn_main1_registr"
		            									   android:clickable="true"
		            									   android:onClick="btn_Register"
		            									   style="@style/OrangeButton"
		            									     />
		            									<Button 
		            									   android:id="@+id/btn_enter"
		            									   android:layout_weight="2"
		            									   android:layout_height="35dp"
		            									   android:layout_width="match_parent"
		            									   android:background="@drawable/button_shape_1"
		            									   android:text="@string/btn_main1_enter"
		            									   android:layout_marginLeft="10dp"
		            									   android:onClick="btn_toEnterActivity"
		            									   style="@style/OrangeButton"
		            									     />
		            													
		        </LinearLayout>

    </LinearLayout>
    

</RelativeLayout>